<resources>
    <string name="app_name"></string>

    <string name="hintPassword">Enter password here</string>
    <string name="hintEmail">Enter email here</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonLogout">Log out</string>
    <string name="buttonRegister">Register</string>
    <string name="hintFirstName">Enter your first name</string>
    <string name="hintLastName">Enter your last name</string>

    <!-- TOOLBAR -->
    <string name="toolbarAddMember">Add member</string>
    <string name="toolbarRemoveMember">Remove member</string>
    <string name="toolbarModifyInstitution">Modify institution</string>
    <string name="toolbarDeleteInstitution">Delete institution</string>
    <string name="toolbarCreateRole">Create role</string>
    <string name="toolbarModifyRole">Modify role</string>
    <string name="toolbarDeleteRole">Delete role</string>


    <string name="hintNewPassword">Enter your new password here</string>
    <string name="hintNewFirstName">Enter your first name here</string>
    <string name="hintNewLastName">Enter your last name here</string>
    <string name="buttonModifyAccount">Modify Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_institutions">Institutions</string>
    <string name="title_account">Account</string>
    <string name="title_documents">Documents</string>
    <string name="checkBoxChangePassword">Change Password</string>
    <string name="checkBoxFirstNameCheckBox">Change first name</string>
    <string name="checkBoxChangeLastName">Change last name</string>
    <string name="toastModifyAccountNoBoxChecked">Nothing to be changed to your account! Check the desired boxes!</string>
    <string name="toastModifyAccountRequestSuccess">Account modified with success!</string>
    <string name="hintCurrentEmail">Your current email</string>
    <string name="hintCurrentFirstName">Your current first name</string>
    <string name="hintCurrentLastName">Your current last name</string>
    <string name="textViewAccountDetails">Your account details</string>
    <string name="descriptionFabAddInstitution">Add institution</string>
    <string name="descriptionInstitution">Institution</string>
    <string name="textViewShow">Show only:</string>

    <!-- CREATE INST -->
    <string name="hintInstitutionName">Your institutions name</string>
    <string name="textViewCreateInstitutionAddress">Address of the institution</string>
    <string name="hintInstitutionAddressCountry">Country of your institution</string>
    <string name="hintInstitutionAddressRegion">Region of your institution</string>
    <string name="hintInstitutionAddressCity">City of your institution</string>
    <string name="hintInstitutionAddressStreetName">Street of the institution</string>
    <string name="hintInstitutionAddressStreetNumber">Your institution\'s street number</string>
    <string name="hintInstitutionAddressBuilding">Building or block of flats name</string>
    <string name="hintInstitutionAddressApartment">Your institutions apartment number</string>
    <string name="buttonCreateInstitution">Create institution</string>

    <!-- Toast messages -->
    <string name="toastErrorVolley">Server error! Please try again later!</string>
    <string name="toastErrorRequestInput">Bad request! Reason : </string>
    <string name="toastSuccessCreateInstitution">Success Create Institution</string>
    <string name="toastFillAllFields">Fill all the fields</string>
    <string name="hintInstitutionCIF">Institution\'s CIF</string>
    <string name="toastBadCIF">CIF must start with \"RO\" and end with \"C\"</string>
    <string name="switchOn">On</string>
    <string name="switchCanModifyInstitution">Can Modify Institution</string>

    <string-array name="spinnerSortDocuments">
        <item>Sent by user</item>
        <item>Received by user</item>
        <item>Created by user</item>
    </string-array>

    <!-- ViewPager login texts -->

    <string name="customer1">"I love Specter, it made me able to easily gather all my institutions invoices and receipts and my job is now a pleasure!"</string>
    <string name="customer2">"I was pretty skeptical at first but after i tried the mobile app i realized Specter offered me so many options and so much versatility!."</string>
    <string name="customer3">"Who would have think that such a small app can change my life so much more than expected. I am so happy our institution has chosen this app."</string>
    <string name="customer4">"Not the conventional great app, but a creative one i can say surely! When i have problems the tech team always helps me! Great guys!"</string>
    <string name="q1">Is Specter really free?</string>
    <string name="a1">Absolutely. We only have the free plan that allows you to send unlimited invoices to an unlimited number of clients, using an unlimited number of institutions.</string>
    <string name="q2">Are my invoices/receipts safe?</string>
    <string name="a2">Keeping your data secure is one of our top priorities — that is why we did not spare any expenses when it comes to our encrypted server systems. This industry-leading setup enables us to sync your private invoicing data to the cloud.</string>
    <string name="q3">Does Specter work on my Mac, PC and mobile device?</string>
    <string name="a3">Absolutely — since Specter is a web-based application you will be able to keep track of your invoicing needs using any device with an internet connection — whether you are at home, in the office or on the go. Moreover we have a mobile app too!</string>
    <string name="f1">Effortless Invoicing</string>
    <string name="f2">Accept Online Payments</string>
    <string name="f3">Accesible for anyone</string>
    <string name="f4">Track Time, Expenses-Mileage</string>
    <string name="f5">Manage Multiple institutions</string>
    <string name="f6">Your Finances In One Place</string>
    <string name="f12">Send professional and elegant looking receipts and invoices. </string>
    <string name="f22">Receive instant online invoice payments from anywhere, any time!</string>
    <string name="f32">With a clear and easy to use layout anyone can start using the app today!</string>
    <string name="f42">Turn hours, miles and expenses into invoices and bills at the click of a button.</string>
    <string name="f52">Setting up multiple institutions has never been this simple.</string>
    <string name="f62">Stay on track with your finances by having a custom feed just for you!</string>
    <string name="switchCanDeleteInstitution">Can delete institution</string>
    <string name="switchCanAddMembers">Can add members</string>
    <string name="switchCanUploadMembers">Can upload members</string>
    <string name="switchCanPreviewUploadedDocuments">Can preview uploaded documents</string>
    <string name="switchCanRemoveUploadedDocuments">Can remove uploaded documents</string>
    <string name="switchCanSendDocuments">Can send documents</string>
    <string name="switchCanPreviewDocuments">Can preview received documents</string>
    <string name="switchCanPreviewSpecificReceivedDocument">Can preview specific received Document</string>
    <string name="switchCanRemoveReceivedDocument">Can remove received Document</string>
    <string name="switchCanDownloadDocuments">Can download documents</string>
    <string name="switchCanAddRoles">Can add roles</string>
    <string name="switchCanModifyRoles">Can modify roles</string>
    <string name="switchCanAssignRoles">Can assign roles</string>
    <string name="switchCanDeassignRoles">Can deassign roles</string>
    <string name="switchCanRemoveMembers">Can remove members</string>
    <string name="switchCanRemoveRoles">Can remove roles</string>
    <string name="hintNewRoleName">The name of the new role</string>
    <string name="buttonAddNewRole">Add new role</string>
    <string name="toastNewRoleName">Role name can not be empty</string>
    <string name="hintDeleteInstitutionName">Name of the institution you want to delete</string>
    <string name="hintDeleteRoleName">Role you want to delete</string>
    <string name="buttonDeleteRole">Delete Role</string>
    <string name="buttonDeleteCurrentRole">DELETE</string>
    <string name="buttonSaveRoleChanges">SAVE</string>
    <string name="confirm_institution_deletion">Confirm institution deletion.</string>
    <string name="confirm_deletion">Confirm.</string>
    <string name="deny_deletion">No</string>
    <string name="new_institution_name">"Enter the new institution name. "</string>
    <string name="change_institution_name">Change institution name.</string>
    <string name="new_institution_address">New institution address</string>
    <string name="button_modify_institution">Modify institution</string>
    <string name="send_document">Send document</string>

</resources>
