<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_addMember"
        android:title="@string/toolbarAddMember" />

    <item
        android:id="@+id/toolbar_deleteMember"
        android:title="@string/toolbarDeleteMember" />

    <item
        android:id="@+id/toolbar_createRole"
        android:title="@string/toolbarCreateRole"/>

    <item
        android:id="@+id/toolbar_modifyRole"
        android:title="@string/toolbarModifyRole" />

    <item
        android:id="@+id/toolbar_deleteInstitution"
        android:title="@string/toolbarDeleteInstitution" />

    <item
        android:id="@+id/toolbar_modifyInstitution"
        android:title="@string/toolbarModifyInstitution" />

</menu>