<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red"
    android:fitsSystemWindows="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="611dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/q1"
                android:textColor="@color/milkyWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/a1"
                android:textColor="@color/milkyWhite"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="22dp"
                android:text="@string/q2"
                android:textColor="@color/milkyWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/a3"
                android:textColor="@color/milkyWhite"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:text="@string/q3"
                android:textColor="@color/milkyWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/a2"
                android:textColor="@color/milkyWhite"
                android:textSize="15sp" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>