<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red"
    tools:context=".ui.institutions.CreateInstitutionActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/Black"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Institution name and CIF"
            android:layout_gravity="center"
            android:textColor="@color/milkyWhite"
            style="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/editTextCreateInstitutionName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionName"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateInstitutionsCIF"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionCIF"
            android:maxLength="11"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCreateInstitutionAddress"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textColor="@color/milkyWhite"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <!-- ADDRESS FIELDS -->
        <EditText
            android:id="@+id/editTextCreateInstitutionCountry"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressCountry"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateInstitutionRegion"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressRegion"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateInstitutionCity"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressCity"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateInstitutionStreetName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressStreetName"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateInstitutionStreetNumber"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressStreetNumber"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextCreateInstitutionsBuilding"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressBuilding"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateInstitutionsApartment"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_edittext_background_white"
            android:textColor="@color/Black"
            android:gravity="center"
            android:hint="@string/hintInstitutionAddressApartment"
            android:importantForAutofill="no"
            android:inputType="number" />


        <Button
            android:id="@+id/buttonCreateInstitution"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_button_background_red"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="17sp"
            android:textColor="@color/milkyWhite"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/buttonCreateInstitution" />
    </LinearLayout>
</RelativeLayout>