<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ModifyAccountActivity">

    <!-- TODO IMPLEMENT CHECKBOXES
    (MAYBE USER ONLY WANTS TO CHANGE PASS, OR ONLY WANTS TO CHANGE HIS (FIRST) NAME)
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /> -->

    <!-- TODO ADD EditText TO REENTER THE NEW PASSWORD -->

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintNewPassword"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/newPasswordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:layout_below="@id/editTextNewPassword"/>

    <EditText
        android:id="@+id/editTextNewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPasswordCheckBox"
        android:hint="@string/hintNewFirstName"
        android:inputType="textPersonName"/>

    <CheckBox
        android:id="@+id/newFirstNameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change first name"
        android:layout_below="@id/editTextNewFirstName"/>

    <EditText
        android:id="@+id/editTextNewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newFirstNameCheckBox"
        android:hint="@string/hintNewLastName"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/newLastNameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change last name"
        android:layout_below="@id/editTextNewLastName"/>

    <Button
        android:id="@+id/buttonModifyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newLastNameCheckBox"
        android:text="@string/buttonModifyAccount" />
</RelativeLayout>