<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="429dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="180dp"
        android:background="@color/Black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/confirm_institution_deletion"
            android:textColor="@color/milkyWhite"
            android:textSize="17sp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/buttonConfirmDeleteInstitution"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/confirm_deletion"
            android:textColor="@color/milkyWhite"
            android:background="@drawable/ic_button_background_red"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

        <Button
            android:id="@+id/buttonDenyDeleteInstitution"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/deny_deletion"
            android:textColor="@color/milkyWhite"
            android:background="@drawable/ic_button_background_red"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>